--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,49 @@ body {
     background-color: var(--black);
 }
 
+.topbar {
+    background-color: var(--gray);
+    width: 95vw;
+    height: 75px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;  
+    border: 1px solid var(--white); 
+}
+
+.topbar > img {
+    height:50%;
+    margin-left: 3%;
+    border-radius: 20%;
+}
+
+.card {
+    position:relative;
+    width: 150px;
+    height: 200px;
+    background-color: var(--gray);
+    border-radius: 20px;
+    border: 2px solid var(--turquoise)
+}
+
+.card::before {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    inset: -0.5rem;
+    content: "";
+    filter: blur(1rem);
+    border: 4px solid var(--turquoise)
+}
+
+.container {
+    margin-top: 50px;
+    height: 800px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    column-gap: 10%;
+
+
+}
