--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,15 @@ p {
     font-size: 13;
 }
 body {
-    background-color: var(--gray);
+    background-image: url(/img/dark-honeycomb.png);
     font-family: Noto Sans;
     color: var(--white);
 }
 
 .topbar {
+    position: sticky;
+    top: 0;
+    z-index: 3;
     background-color: var(--gray);
     width: 100%;
     border-radius: 15px;
@@ -44,7 +47,7 @@ body {
     position: relative;
     width: 100%;
     height: calc(65% * 1.618);
-    background-color: var(--gray);
+    background-color: #37485dB2;
     border-radius: 20px;
     border: 2px solid var(--turquoise);
     display: grid;
@@ -56,55 +59,46 @@ body {
     'tx tx';
     align-items: center;
     justify-items: end;
+} 
     
-    
-    .image {
-        width:100%;
-        height:100%;
-        grid-area: img;
-        background-color: black;
-        z-index: 3;
-        border-radius: 20px;
-    }
-    
-    ::before {
-        position: absolute;
-        height: 100%; 
-        width: 100%;
-        z-index: -1;
-        inset: -.3rem;
-        content: "";
-        filter: blur(.5rem);
-        border-radius: 20px;
-        border: 1px solid var(--turquoise)
-    }
-    .button {
-        position:relative;
-        grid-area: tx;
-        width: 50%;
-        height: 50%;
-        background-color: var(--turquoise);
-        margin-right: 10%;
-        border-radius: 10px;
-        border: 1px solid var(--white);
-        text-align: center;
-        align-content: center;
-        z-index: 3;
-    }
-    
-    .button::after {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        z-index: 0;
-        inset: -0.3rem;
-        content: "";
-        filter: blur(.5rem);
-        border-radius: 10px;
-        border: 1px solid var(--white)
-    }
-        
+.image {
+    width:100%;
+    height:100%;
+    grid-area: img;
+    background-color: var(--black);
+    z-index: 3;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
 }
+
+.card::before {
+    position: absolute;
+    height: 100%; 
+    width: 100%;
+    z-index: -2;
+    inset: -.3rem;
+    content: "";
+    filter: blur(1rem);
+    border-radius: 20px;
+    border: 3px solid var(--turquoise)
+}
+.button {
+    position:relative;
+    grid-area: tx;
+    width: 50%;
+    height: 50%;
+    background-color: var(--black);
+    margin-right: 10%;
+    border-radius: 10px;
+    text-align: center;
+    align-content: center;
+    z-index: 3;
+    display: flex;
+    align-items: center;
+    transition: 250ms ease;
+}
+
 
 
 
@@ -113,7 +107,7 @@ body {
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 33% 33% 1fr;
-    grid-template-rows: 100px 400px 400px 1fr;
+    grid-template-rows: 75px 400px 400px 1fr;
     grid-template-areas: 
     'hed hed hed hed'
     'as1 sc1 sc2 as2'
@@ -124,33 +118,31 @@ body {
     justify-items: center;
 }
 
-div {
-    #sc1 {
-        grid-area: sc1;
-    }
-    
-    #sc2 {
-        grid-area: sc2;
-    }
-    
-    #sc3 {
-        grid-area: sc3;
-    }
-    
-    #sc4 {
-        grid-area: sc4;
-    }
-    
-    .as1 {
-        grid-area: as1;
-    }
-    
-    .as2 {
-        grid-area: as2;
-    }
-    
 
-}    
+#sc1 {
+    grid-area: sc1;
+}
+    
+#sc2 {
+    grid-area: sc2;
+}
+
+#sc3 {
+    grid-area: sc3;
+}
+
+#sc4 {
+    grid-area: sc4;
+}
+
+.as1 {
+    grid-area: as1;
+}
+
+.as2 {
+    grid-area: as2;
+}
+
 
 .icons {
     width: 100%;
@@ -166,3 +158,61 @@ a {
 }
 /* Reklamer att ha med: gambling, free robux, 
    crypto och raid: shadow legends */
+
+
+footer {
+    background-color: var(--black);
+    grid-area: fot;
+    width: 100%;
+    text-align: center; 
+}
+
+aside > img {
+    width: 100%;
+}
+
+.link {
+    display: flex;
+    flex: 1;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.question1 {
+    height: 60%;
+    background-color: var(--white);
+    border-radius: inherit;
+    margin: 1rem;
+    color: grey;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    padding: 1rem;
+}
+
+#latest {
+    margin-left: 1rem;
+}
+
+
+#message {
+    margin-left: 1rem;
+}
+
+.message {
+    height: 60%;
+    background-color: var(--white);
+    border-radius: 20px;
+    margin: 1rem;
+    color: grey;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    padding: 1rem;
+}
+
+.button:hover {
+    scale: 1.05;
+    background-color: var(--turquoise);
+
+}
