--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
     --lightblue: #27efc7;   
 }
 
-
 body {
     background-image: url(/img/dark-honeycomb.png);
     font-family: 'Noto Sans';
@@ -96,9 +95,6 @@ body {
     transition: 250ms ease;
 }
 
-
-
-
 .container {
     height: 1200px;
     display: grid;
@@ -114,7 +110,6 @@ body {
     column-gap: 25px;
     justify-items: center;
 }
-
 
 #sc1 {
     grid-area: sc1;
@@ -140,7 +135,6 @@ body {
     grid-area: as2;
 }
 
-
 .icons {
     width: 100%;
     display: flex;
@@ -154,12 +148,12 @@ a {
     color: var(--white);
 }
 
-
 footer {
     background-color: var(--black);
     grid-area: fot;
     width: 100%;
     text-align: center; 
+    border-radius: 20px;
 }
 
 aside > img {
@@ -177,7 +171,6 @@ aside > img {
     width: 100%;
 }
 
-
 .question1 {
     height: 60%;
     background-color: var(--white);
@@ -192,7 +185,6 @@ aside > img {
 #latest {
     margin-left: 1rem;
 }
-
 
 #message {
     margin-left: 1rem;
@@ -212,9 +204,7 @@ aside > img {
 .button:hover {
     scale: 1.05;
     background-color: var(--turquoise);
-
 }
-
 
 #account {
     margin-left: 1rem;
@@ -237,46 +227,56 @@ aside > img {
     'hed hed hed hed hed hed'
     'si1 pr1 pr2 pr3 pr4 si2'
     'si1 pr5 pr6 pr7 pr8 si2'
-    'si1 pr9 pr10 pr11 pr12 si2';
+    'si1 pr9 pr10 pr11 pr12 si2'
+    'fot fot fot fot fot fot';
     row-gap: 50px;
     column-gap: 20px;
 }
 
-
-
 #pr1 {
 grid-area: pr1;
 }
+
 #pr2 {
 grid-area: pr2;
 }
+
 #pr3 {
 grid-area: pr3;
 }
+
 #pr4 {
 grid-area: pr4;
 }
+
 #pr5 {
 grid-area: pr5;
 }
+
 #pr6 {
 grid-area: pr6;
 }
+
 #pr7 {
 grid-area: pr7;
 }
+
 #pr8 {
 grid-area: pr8;
 }
+
 #pr9 {
 grid-area: pr9;
 }
+
 #pr10 {
 grid-area: pr10;
 }
+
 #pr11 {
 grid-area: pr11;
 }
+
 #pr12 {
     grid-area: pr12;
 }
@@ -293,9 +293,9 @@ grid-area: pr11;
 }
 
 
-
-
 /*Om-oss.html*/
+
+
 
 .about-grid {
     width: 97vw;
@@ -320,10 +320,12 @@ grid-area: pr11;
 .about1 {
     grid-area: s1;
     height: 95%;
+    width: 100%;
 }
 
 .about1Inside {
     height: 90%;
+    width:100%;
     margin-left: 10px;
 }
 
@@ -339,4 +341,3 @@ grid-area: pr11;
 .aboutfoot {
     grid-area: ft;
 }
-
